lexer_parser/src/test/exempleFile/miniJaja/success/arrayVoid.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des tableaux	*/
/************************/

class arrayVoid {

	main {
        void t[16];
	}
}