lexer_parser/src/test/exempleFile/miniJaja/fail/arrayWrongType.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des tableaux	*/
/************************/

class arrayWrongType {

	main {
        double t[16];

	}
}